k8s-apps/argocd/templates/healthcheck-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-healthcheck-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: terence.cloud
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    # - host: argocd.terence.cloud
    - host: k8s-ingress.snow-delta.ts.net
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: https
            path: /argocd/healthz
            pathType: ImplementationSpecific
