k8s-apps/argocd/templates/ingress-cli.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-cli-ingress
  annotations:
    external-dns.kubernetes.io/target: home.terence.cloud
    external-dns.kubernetes.io/cloudflare-proxied: "false" # 403 on the github actions runner
    traefik.ingress.kubernetes.io/router.middlewares: traefik-modsecurity@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.terence.cloud
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /application.ApplicationService/(Get|List|ManagedResources)
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /session.SessionService/Create
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /cluster.SettingsService/Get
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /cluster.ClusterService/Get
            pathType: ImplementationSpecific
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /project.ProjectService/GetDetailedProject
            pathType: ImplementationSpecific
