k8s-apps/argocd/templates/ingress-healthcheck.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-healthcheck-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: home.terence.cloud
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false" # 403 on the github actions runner
    traefik.ingress.kubernetes.io/router.middlewares: traefik-modsecurity@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.terence.cloud
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            path: /healthz
            pathType: ImplementationSpecific
