k8s-apps/argocd/templates/ingress-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-webhook-ingress
  annotations:
    external-dns.kubernetes.io/target: home.terence.cloud
    external-dns.kubernetes.io/cloudflare-proxied: "false" # 403 on the github actions runner
spec:
  ingressClassName: traefik
  rules:
    - host: argocd.terence.cloud
    # - host: k8s-ingress.snow-delta.ts.net
      http:
        paths:
          - backend:
              service:
                name: argocd-server
                port:
                  name: http
            # path: /argocd/api/webhook
            path: /api/webhook
            pathType: ImplementationSpecific
